tests/src/frontend/syntax/invalid/lvalue_in_tuple.sk
fun main(): String {
  (x, x.!y)
}
